fixed responsive spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,7 @@ h2 {
   font-family: var(--content-font-family);
   color: var(--seconday-color);
   font-weight: bold;
+  text-align: left;
 }
 h3 {
   font-family: var(--content-font-family);
@@ -47,7 +48,7 @@ h3 {
   font-size: 16px;
   font-family: var(--content-font-family);
 }
-.container h2 {
+h2 {
   font-family: var(--heading-font-family);
   font-size: 64px;
   font-weight: bold;
@@ -58,5 +59,56 @@ h3 {
   margin-top: 127px;
   margin-bottom: 82px;
 }
-.project-text {
+.text-container {
+  margin-left: 24px;
+}
+.hero .buttons {
+  text-align: center;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  font-family: var(--content-font-family);
+}
+.buttons {
+  text-align: start;
+}
+.project-description {
+  text-align: start;
+}
+@media (max-width: 570px) {
+  h1 {
+    font-size: 48px;
+  }
+  h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 14px;
+  }
+  .hero p {
+    font-size: 26px;
+    font-weight: bold;
+    font-family: var(--content-font-family);
+    margin-bottom: 0;
+  }
+  .text-container {
+    margin-left: 0;
+  }
+  .text-between {
+    font-size: 14px;
+    margin-top: 70px;
+    margin-bottom: 50px;
+    padding: 0 15px;
+  }
+  .buttons {
+    text-align: center;
+  }
+  .project-description {
+    text-align: center;
+  }
 }
